src/objects/SalesManager__c.object
<CustomObject>
    <description>Person who works at car rent saloon and helps people to rent proper
car.</description>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <description>Birth Date</description>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Synchronization status</description>
        <label>Is Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <label>Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Sales Manager</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>